--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>North北<title>
-</head>
-<body>
-<h1 color="red">My Home Page<h1>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>North北</title>
+	</head>
+	<body>
+		<h1 font-family color="red">My Home Page<h1>
+	</body>
 </html>
