--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>North北</title>
+		<meta name="baidu_union_verify" content="0b6e65010acb1a104d0f45a285730cbc">
 	</head>
 	<body>
 		<h1 font-family color="red">My Home Page<h1>
