--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>North北</title>
-		<meta name="baidu_union_verify" content="0b8b3d9aadc05994b9a4ea9991c9b274">
+		
+		<link rel="Shortcut Icon" href="favicon.ico" />
+		<link rel="Bookmark" href="favicon.ico" />
 	</head>
 	<body>
 		<h1 font-family color="red">My Home Page<h1>
