--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>North北</title>
+		<title>80后</title>
 		
 		<link rel="Shortcut Icon" href="favicon.ico" />
 		<link rel="Bookmark" href="favicon.ico" />
