--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
 	</head>
 	<body>
 		<h1 font-family color="red">My Home Page<h1>
+		<ul>
+			<li>游戏</li>
+			<li>动画片</li>
+			<li>电玩</li>
+			<li>幼儿园</li>
+			<li>小学</li>
+			<li>初中</li>
+			<li>高中</li>
+			<li>大学</li>
+			<li>工作</li>
+			<li>家庭</li>
+			<li>生活</li>
+		</ul>
 	</body>
 </html>
