--- a/index.html
+++ b/index.html
@@ -1,26 +1,66 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>80后</title>
-		
-		<link rel="Shortcut Icon" href="favicon.ico" />
-		<link rel="Bookmark" href="favicon.ico" />
-	</head>
-	<body>
-		<h1 font-family color="red">My Home Page<h1>
-		<ul>
-			<li>游戏</li>
-			<li>动画片</li>
-			<li>电玩</li>
-			<li>幼儿园</li>
-			<li>小学</li>
-			<li>初中</li>
-			<li>高中</li>
-			<li>大学</li>
-			<li>工作</li>
-			<li>家庭</li>
-			<li>生活</li>
-		</ul>
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>80後</title>
+        <link rel="Shortcut Icon" href="favicon.ico" />
+        <link rel="Bookmark" href="favicon.ico" />
+        <style>.name1{ font-family:"楷体";
+						font-size:36px; font-style:!important;
+						color:#666; background-color:#9F9;
+						background-image:url(back.jpg);
+						background-attachment:scroll}
+        </style>
+        <style>.name_red{ font-family:"楷体";
+						color:#F00;}
+		</style>
+		<style>.name_ori{ font-family:"楷体";
+						color:#F93;}
+		</style>
+        <style>.name_yel{ font-family:"楷体";
+						color:#FF0;}
+		</style>
+        <style>.name_gre{ font-family:"楷体";
+						color:#000;}
+		</style>
+        <style>.name_blu{ font-family:"楷体";
+						color:#00F;}
+		</style>
+        <style>.name_dian{ font-family:"楷体";
+						color:#006;}
+		</style>
+        <style>.name_zi{ font-family:"楷体";
+						color:#609;}
+		</style>
+        <style>.name_piny{ font-family:"楷体";
+						color:#F0F;}
+		</style>
+        <style>.name_color_01{ font-family:"楷体";
+						color:#996;}
+		</style>
+        <style>.name_color_02{ font-family:"楷体";
+						color:#C96}
+        </style>
+        <style>.name_color_03{ font-family:"楷体";
+						color:#0C9;}
+        </style>
+    </head>
+
+    <body>
+        <h1 class="name1" align="center">80後</h1>
+        <table>
+            <tr><td class="name_red">游戏</td></tr>
+            <tr><td class="name_ori">动画片</td></tr>
+            <tr><td class="name_yel">电玩</td></tr>
+            <tr><td class="name_gre">幼儿园</td></tr>
+            <tr><td class="name_blu">小学</td></tr>
+            <tr><td class="name_dian">初中</td></tr>
+            <tr><td class="name_zi">高中</td></tr>
+            <tr><td class="name_piny">大学</td></tr>
+            <tr><td class="name_color_01">工作</td></tr>
+            <tr><td class="name_color_02">家庭</td></tr>
+            <tr><td class="name_color_03">生活</td></tr>
+        </table>
+    </body>
 </html>
+
