--- a/index.html
+++ b/index.html
@@ -3,46 +3,46 @@
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>80後</title>
-        <link rel="Shortcut Icon" href="favicon.ico" />
-        <link rel="Bookmark" href="favicon.ico" />
+        <link rel="Shortcut Icon" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1523297036404&di=e91e59c7946fa777af33542dcea405ac&imgtype=jpg&src=http%3A%2F%2Fimg0.imgtn.bdimg.com%2Fit%2Fu%3D1608125640%2C1551713823%26fm%3D214%26gp%3D0.jpg" />
+        <link rel="Bookmark" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1523297036404&di=e91e59c7946fa777af33542dcea405ac&imgtype=jpg&src=http%3A%2F%2Fimg0.imgtn.bdimg.com%2Fit%2Fu%3D1608125640%2C1551713823%26fm%3D214%26gp%3D0.jpg" />
         <style>.name1{ font-family:"楷体";
-						font-size:36px; font-style:!important;
-						color:#666; background-color:#9F9;
-						background-image:url(back.jpg);
-						background-attachment:scroll}
+			font-size:36px; font-style:!important;
+			color:#666; background-color:#9F9;
+			background-image:url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1523296782038&di=40c6ba2b98c921480580d5af759f100f&imgtype=0&src=http%3A%2F%2Fimg13.3lian.com%2F201409%2F16%2Fb43fa478392c46b4ef8c23069df67ff8.png);
+			background-attachment:scroll}
         </style>
         <style>.name_red{ font-family:"楷体";
-						color:#F00;}
-		</style>
-		<style>.name_ori{ font-family:"楷体";
-						color:#F93;}
-		</style>
+			color:#F00;}
+	</style>
+	<style>.name_ori{ font-family:"楷体";
+			color:#F93;}
+	</style>
         <style>.name_yel{ font-family:"楷体";
-						color:#FF0;}
-		</style>
+			color:#FF0;}
+	</style>
         <style>.name_gre{ font-family:"楷体";
-						color:#000;}
-		</style>
+			color:#000;}
+	</style>
         <style>.name_blu{ font-family:"楷体";
-						color:#00F;}
-		</style>
+			color:#00F;}
+	</style>
         <style>.name_dian{ font-family:"楷体";
-						color:#006;}
-		</style>
+			color:#006;}
+	</style>
         <style>.name_zi{ font-family:"楷体";
-						color:#609;}
-		</style>
+			color:#609;}
+	</style>
         <style>.name_piny{ font-family:"楷体";
-						color:#F0F;}
-		</style>
+			color:#F0F;}
+	</style>
         <style>.name_color_01{ font-family:"楷体";
-						color:#996;}
-		</style>
+			color:#996;}
+	</style>
         <style>.name_color_02{ font-family:"楷体";
-						color:#C96}
+			color:#C96}
         </style>
         <style>.name_color_03{ font-family:"楷体";
-						color:#0C9;}
+			color:#0C9;}
         </style>
     </head>
 
