--- a/index.html
+++ b/index.html
@@ -49,7 +49,26 @@
     <body>
         <h1 class="name1" align="center">80後</h1>
         <table>
-            <tr><td class="name_red">游戏</td></tr>
+            <tr>
+            	<td width="72" class="name_red">游戏</td>
+                <td width="6" rowspan="11";colspan="11";>  </td>	
+                    <td width="508" rowspan="11";colspan="11";>
+                        <div align="right">
+                        这是一个80後交流网站<br>
+                        交流对象，<br>
+                        出生时间在1980~1989的人们。<br>
+                        10年，<br>
+                        一代人，<br>
+                        时光荏苒，<br>
+                        光阴如梭。<br>
+                        <br>
+                        致那些已经逝去的，<br>
+                        享那些已然拥有的，<br>
+                        梦那些终会到来的。<br>
+                          </div>
+                      </div>
+                  </td>	
+            </tr>
             <tr><td class="name_ori">动画片</td></tr>
             <tr><td class="name_yel">电玩</td></tr>
             <tr><td class="name_gre">幼儿园</td></tr>
