--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
             <tr><td class="name_color_02">家庭</td></tr>
             <tr><td class="name_color_03">生活</td></tr>
         </table>
+	<ul>
+		<li><a href="01_js.html">Day_01</a></li>
+	</ul>
     </body>
 </html>
 
