--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </table>
 	<ul>
 		<li><a href="01_js.html">Day_01</a></li>
+<li><a href="improve.html">improve</a></li>
 	</ul>
     </body>
 </html>
