--- a/improve.html
+++ b/improve.html
@@ -5,11 +5,16 @@
 </HEAD>
 <BODY>
 <table>
-    <td>
-        <tr>20191016</tr>
-        <tr>20:00-22:30</tr>
-        <tr>japanese</tr>
-    </td>
+    <tr>
+        <th>日期</th>
+        <th>20:00-22:00</th>
+        <th>22:00-23:00</th>
+    </tr>
+    <tr>
+        <td>20191016</td>
+        <td>japanese</td>
+        <td>java</td>
+    </tr>
 </table>
 </BODY>
 </HTML>
