--- a/improve.html
+++ b/improve.html
@@ -4,7 +4,7 @@
 <META CHARSET='UTF-8'>
 </HEAD>
 <BODY>
-<table rules="all">
+<table rules="all" border="1">
     <tr>
         <th>日期</th>
         <th>20:00-22:00</th>
