--- a/improve.html
+++ b/improve.html
@@ -2,6 +2,13 @@
 <HTML>
 <HEAD>
 <META CHARSET='UTF-8'>
+<title>improve</title>
+<meta name=”viewport” 
+    content=”width=device-width, 
+    initial-scale=1.0, 
+    minimum-scale=0.5, 
+    maximum-scale=2.0, 
+    user-scalable=yes” />
 </HEAD>
 <BODY>
 <table rules="all" border="1">
