--- a/improve.html
+++ b/improve.html
@@ -16,11 +16,13 @@
         <th>日期</th>
         <th>20:00-22:00</th>
         <th>22:00-23:00</th>
+        <th>备注</th>
     </tr>
     <tr>
         <td>20191016</td>
         <td>japanese</td>
         <td>java</td>
+        <td>熟读课文练习记单词</td>
     </tr>
 </table>
 </BODY>
