--- a/improve.html
+++ b/improve.html
@@ -12,18 +12,44 @@
 </HEAD>
 <BODY>
 <table rules="all" border="1">
+<script>document.write("<h1> 今天是:" + date() + "</h1>")</script>
+<h2>下一事件:2019.12.1 日语N3考试</h2>
     <tr>
         <th>日期</th>
+        <th>08:30-09:30</th>
+        <th>12:00-13:00</th>
         <th>20:00-22:00</th>
         <th>22:00-23:00</th>
-        <th>备注</th>
+        <th>备注1</th>
+        <th>备注2</th>
     </tr>
     <tr>
         <td>20191016</td>
+        <td></td>
         <td>japanese</td>
         <td>java</td>
         <td>熟读课文练习记单词</td>
+        <td>concurrent sem thread</td>
     </tr>
+    <tr>
+        <td>20191017</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+
 </table>
 </BODY>
 </HTML>
