--- a/improve.html
+++ b/improve.html
@@ -11,9 +11,11 @@
     user-scalable=yes” />
 </HEAD>
 <BODY>
-<script>document.write("<h1> 今天是:" + date() + "</h1>")</script>
-<h2>下一事件:2019.12.1 日语N3考试</h2>
-<table rules="all" border="1">
+<h1> 今天是:<br>
+<script>document.write(date())</script>
+</h1>
+<h2>下一事件:<br>2019.12.1 日语N3考试</h2>
+<table rules="all" border="2">
     <tr>
         <th>日期</th>
         <th>08:30-09:30</th>
@@ -22,17 +24,24 @@
         <th>22:00-23:00</th>
         <th>备注1</th>
         <th>备注2</th>
+        <th>备注3</th>
+        <th>备注4</th>
     </tr>
     <tr>
         <td>20191016</td>
+        <td></td>
         <td></td>
         <td>japanese</td>
         <td>java</td>
         <td>熟读课文练习记单词</td>
         <td>concurrent sem thread</td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>20191017</td>
+        <td>javascript</td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -41,6 +50,8 @@
         <td></td>
     </tr>
     <tr>
+        <td></td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
