--- a/improve.html
+++ b/improve.html
@@ -11,7 +11,7 @@
     user-scalable=yes” />
 </HEAD>
 <BODY>
-<h2> 今天是:<br>
+<h2 style="color:red"> 今天是:<br>
 <script>
 date = new Date();
 document.write(
