--- a/improve.html
+++ b/improve.html
@@ -15,8 +15,8 @@
 <script>
 date = new Date();
 document.write(
-date.getFullYear()+1 + "." +
-date.getMonth() + "." +
+date.getFullYear() + "." +
+date.getMonth()+1 + "." +
 date.getDate())
 </script>
 </h2>
