--- a/improve.html
+++ b/improve.html
@@ -16,7 +16,7 @@
 date = new Date();
 document.write(
 date.getFullYear() + "." +
-date.getMonth()+1 + "." +
+(date.getMonth() + 1) + "." +
 date.getDate())
 </script>
 </h2>
